# Overloaadd

./: .gitignore  config.example.json  db.json  pyproject.toml
overloaadd/: __init__.py  dataclasses.py  encoder.py  helpers.py  logger.py  main.py  watcher.py
overloaadd/handlers/: __init__.py  overseerr.py  transmission.py  xthor.py
presets/: movie.json
