[tool.poetry]
name = "overloaadd"
version = "1.0.0"
description = ""
authors = ["Valentin LAMBOLEY-DEPOIRE <me@yubo.dev>"]
readme = "README.md"
packages = [
    { include = "overloaadd" },
]

[tool.poetry.scripts]
overloaadd-encoder = "overloaadd.main:encoder"
overloaadd-watcher = "overloaadd.main:watcher"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
transmission-rpc = "^7.0.3"
tinydb = "^4.8.0"
loguru = "^0.7.2"
jellyfish = "^1.0.3"
pydantic = "^2.6.1"
get-video-properties = "^0.1.1"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pytype = "^2024.1.24"
flake8 = "^7.0.0"
ipython = "^8.20.0"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
length_sort = false
combine_star = false
use_parentheses = true
import_heading_stdlib = "Standard Library"
import_heading_firstparty = "First Party"
import_heading_thirdparty = "Third Party"
import_heading_localfolder = "Local"
force_sort_within_sections = false
from_first = false
force_grid_wrap = 0

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"